# ros-mpu9250-imu

./: CMakeLists.txt  README.md  package.xml  sketch_apr20c.ino
include/: AK8963_Magnetometer.cpp  AK8963_Magnetometer.h  I2CBus.cpp  MPU9250_Acc_Gyro.cpp  MPU9250_Acc_Gyro.h
src/: talker.cpp
